--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^3.1.2",
         "admin-lte": "^3.2.0",
+        "font-awesome": "^4.7.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
     }
