--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "admin-lte": "^3.2.0",
         "font-awesome": "^4.7.0",
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-router": "^4.0.13"
     }
 }
